syntax = "proto3";

import "coprocess_mini_request_object.proto";
import "coprocess_session_state.proto";

package main;

message CoProcessObject {
  string hook_type = 1;
  CoProcessMiniRequestObject request = 2;
  CoProcessSessionState session_state = 3;
  map<string, string> metadata = 4;
  map<string, string> spec = 5;
}
