syntax = "proto3";

package main;

message CoProcessReturnOverrides {

}
